--- a/na62-farm-dim.conf
+++ b/na62-farm-dim.conf
@@ -1,1 +1,6 @@
 farmExecPath=/workspace/na62-farm/Debug/na62-farm
+
+# Number of milliseconds that have to pass without receiving a heart beat 
+# from the farm program until we go into error mode. It musst be a little
+# larger than the option monitorUpdateTime of the farm program.
+hearbeatTimeoutMillis=510
