--- a/na62-farm-dim.conf
+++ b/na62-farm-dim.conf
@@ -4,3 +4,6 @@ farmExecPath=/workspace/na62-farm/Debug/na62-farm
 # from the farm program until we go into error mode. It musst be a little
 # larger than the option monitorUpdateTime of the farm program.
 hearbeatTimeoutMillis=510
+
+multiStatServices=DetectorData,L1TriggerData,L2TriggerData
+singlelongServices=BytesToMerger,EventsToMerger,L1MTPsSent,L1TriggersSent,PF_PacksReceived,PF_BytesReceived,PF_PacksDropped
