--- a/na62-farm-dim.conf
+++ b/na62-farm-dim.conf
@@ -7,6 +7,6 @@ hearbeatTimeoutMillis=510
 
 
 multiStatServices=DetectorData,L1TriggerData,L2TriggerData
-singlelongServices=BytesToMerger,EventsToMerger,L1MTPsSent,L1TriggersSent,PF_PacksReceived,PF_BytesReceived,PF_PacksDropped
+singlelongServices=BytesToMerger,EventsToMerger,L1MRPsSent,L1TriggersSent,PF_PacksReceived,PF_BytesReceived,PF_PacksDropped
 
 isMerger=0
