--- a/.project
+++ b/.project
@@ -3,6 +3,7 @@
 	<name>na62-farm-dim-interface</name>
 	<comment></comment>
 	<projects>
+		<project>na62-farm-lib</project>
 	</projects>
 	<buildSpec>
 		<buildCommand>
