Communication with farm is now working via zmq

--- a/na62-farm-dim.conf
+++ b/na62-farm-dim.conf
@@ -9,4 +9,4 @@ hearbeatTimeoutMillis=1010
 multiStatServices=DetectorData,L1TriggerData,L2TriggerData
 singlelongServices=BytesToMerger,EventsToMerger,L1MRPsSent,L1TriggersSent,PF_PacksReceived,PF_BytesReceived,PF_PacksDropped
 
-isMerger=0
+isMerger=false
