Receiving json strings enabled

--- a/na62-farm-dim.conf
+++ b/na62-farm-dim.conf
@@ -6,7 +6,7 @@ farmExecPath=/usr/local/bin/na62-farm
 hearbeatTimeoutMillis=1010
 
 
-multiStatServices=DetectorData,L1TriggerData,L2TriggerData
+multiStatServices=DetectorData,L1TriggerData,L2TriggerData,UnfinishedEventsData
 singlelongServices=BytesToMerger,EventsToMerger,L1MRPsSent,L1TriggersSent,PF_PacksReceived,PF_BytesReceived,PF_PacksDropped
 
 isMerger=false
