Added EventsInLastBurst to merger setting

--- a/na62-merger-dim.conf
+++ b/na62-merger-dim.conf
@@ -6,6 +6,7 @@ farmExecPath=/usr/local/bin/na62-farm-merger
 hearbeatTimeoutMillis=510
 
 multiStatServices=BurstProgress
-singlelongServices=
+singlelongServices=EventsInLastBurst
+
 
 isMerger=true
