Update list of published info

--- a/na62-farm-dim.conf
+++ b/na62-farm-dim.conf
@@ -6,7 +6,7 @@ farmExecPath=/usr/local/bin/na62-farm
 hearbeatTimeoutMillis=1010
 
 
-multiStatServices=DetectorData,L1TriggerData,L2TriggerData,UnfinishedEventsData,L0BuildingTimeVsEvtNumber,L1BuildingTimeVsEvtNumber,L1ProcessingTimeVsEvtNumber,L2ProcessingTimeVsEvtNumber
-singlelongServices=BytesToMerger,EventsToMerger,L1MRPsSent,L1TriggersSent,PF_PacksReceived,PF_BytesReceived,PF_PacksDropped,L1InputEvents,L1RequestToCreams,L2InputEvents,L1BypassedEvents,L1ProcessingTimeMean,L2ProcessingTimeMean,L1ProcessingTimeMax,L2ProcessingTimeMax,L0BuildingTimeMean,L1BuildingTimeMean,L0BuildingTimeMax,L1BuildingTimeMax
+multiStatServices=DetectorData,MonitoringL0Data,MonitoringL1Data,L1TriggerData,L2TriggerData,UnfinishedEventsData,L0BuildingTimeVsEvtNumber,L1BuildingTimeVsEvtNumber,L1ProcessingTimeVsEvtNumber,L2ProcessingTimeVsEvtNumber
+singlelongServices=BytesToMerger,EventsToMerger,L1MRPsSent,L1TriggersSent,PF_PacksReceived,PF_BytesReceived,PF_PacksDropped,L1InputEvents,L1RequestToCreams,L2InputEvents,L1ProcessingTimeMean,L2ProcessingTimeMean,L1ProcessingTimeMax,L2ProcessingTimeMax,L0BuildingTimeMean,L1BuildingTimeMean,L0BuildingTimeMax,L1BuildingTimeMax
 
 isMerger=false
