--- a/na62-farm-dim.conf
+++ b/na62-farm-dim.conf
@@ -1,4 +1,6 @@
 farmExecPath=/usr/local/bin/na62-farm
+smFarmExecPath=/usr/local/bin/na62-farm-sm
+triggerProcessorExecPath=/usr/local/bin/trigger-processor
 
 # Number of milliseconds that have to pass without receiving a heart beat 
 # from the farm program until we go into error mode. It musst be a little
